# SimBA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcf_eval.cpp  vcf_sim.cpp
Contributing/: Contributing.md  cla-corporate.docx
src/: CMakeLists.txt  eval.cpp  sim.cpp  simba-hap.cpp
